--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     display: flex;
-    gap: 3em;
+    height: 100vh;
+    margin: 0;
 }
 
 #header {
@@ -12,14 +13,32 @@ body {
 
 a {
     text-decoration: none;
+    color: black;
 }
 
 #header li {
     list-style-type: none;
-    padding: 0.5em;
+    padding: 0.8em 0.5em;
     border-top: 1px solid black;
+}
+
+#header ul {
+    overflow-y: scroll;
 }
 
 ul {
     padding: 0;
+}
+
+#sections {
+    margin: 0 2em;
+    overflow-y: scroll;
+}
+
+section ul {
+    padding-left: 3em;
+}
+
+.js {
+    background-color: rgba(192, 192, 192, 0.384);
 }
